--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ li{list-style: none;}
    
    .center-div h1::before{
       
-       content:"SAKSHI KUMARI";
+       content:"Jai Balaji";
        width: 100%;
        color:white;
        position: absolute;
